--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -38,3 +38,39 @@ spec:
     service:
       tcp:
         loadBalancerIP: ${TRAEFIK_IP}
+    ingress:
+      main:
+        enabled: false
+        integrations:
+          traefik:
+            enabled: true
+            middlewares:
+              - name: local
+                namespace: traefik
+              - name: bouncer
+                namespace: traefik
+          certManager:
+            enabled: true
+            certificateIssuer: wethecommon-0-le-prod
+
+        hosts:
+          - host: traefik.${BASE_DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+    middlewares:
+      bouncer:
+        - name: bouncer
+          enabled: true
+          logLevel: INFO
+          crowdsecMode: stream
+          crowdsecLapiHost: crowdsec-service.crowdsec:8080
+          forwardedHeadersTrustedIPs: []
+          clientTrustedIPs:
+            - 172.16.0.0/16
+            - 172.17.0.0/16
+            - 192.168.10.0/24
+            - 192.168.20.0/24
+          crowdsecLapiTLSCertificateAuthorityFile: /etc/traefik/crowdsec-certs/ca.crt
+          crowdsecLapiTLSCertificateBouncerFile: /etc/traefik/crowdsec-certs/tls.crt
+          crowdsecLapiTLSCertificateBouncerKeyFile: /etc/traefik/crowdsec-certs/tls.key
