--- a/clusters/main/kubernetes/apps/networking/homeassistant/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homeassistant/app/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
                             - websecure
                     certManager:
                         enabled: true
-                        certificateIssuer: wethecommon-prod
+                        certificateIssuer: wethecommon-le-prod
                     homepage:
                         enabled: false
         release_name: homeassistant
