--- a/clusters/main/kubernetes/apps/networking/minio/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/minio/app/helm-release.yaml
@@ -32,7 +32,7 @@ spec:
                             - websecure
                     certManager:
                         enabled: true
-                        certificateIssuer: wethecommon-prod
+                        certificateIssuer: wethecommon-le-prod
                     homepage:
                         enabled: false
                 hosts:
