--- a/clusters/main/kubernetes/apps/media/prowlarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/prowlarr/app/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
                             - websecure
                     certManager:
                         enabled: true
-                        certificateIssuer: wethecommon-le-prod
+                        certificateIssuer: wethecommon-prod-cert
  #               tls:
  #                   hosts:
  #                       - host: prowlarr.${BASE_DOMAIN}
