--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     chart:
         spec:
             chart: homepage
-            version: 9.3.2
+            version: 9.3.4
             sourceRef:
                 kind: HelmRepository
                 name: truecharts
@@ -133,7 +133,7 @@ spec:
                             - websecure
                     certManager:
                         enabled: true
-                        certificateIssuer: wethecommon-le-prod
+                        certificateIssuer: wethecommon-prod-cert
         persistence:
             bookmarks-config:
                 enabled: '{{ not .Values.forceConfigFromValues }}'
