--- a/clusters/main/kubernetes/apps/networking/truenas/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/truenas/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     chart:
         spec:
             chart: external-service
-            version: 15.2.1
+            version: 15.2.2
             sourceRef:
                 kind: HelmRepository
                 name: truecharts
@@ -41,7 +41,7 @@ spec:
                             - websecure
                     certManager:
                         enabled: true
-                        certificateIssuer: wethecommon-le-prod
+                        certificateIssuer: wethecommon-prod-cert
                     homepage:
                         enabled: false
         release_name: truenas
