--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -58,19 +58,19 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
-    middlewares:
-      bouncer:
-        - name: bouncer
-          enabled: true
-          logLevel: INFO
-          crowdsecMode: stream
-          crowdsecLapiHost: crowdsec-service.crowdsec:8080
-          forwardedHeadersTrustedIPs: []
-          clientTrustedIPs:
-            - 172.16.0.0/16
-            - 172.17.0.0/16
-            - 192.168.10.0/24
-            - 192.168.20.0/24
-          crowdsecLapiTLSCertificateAuthorityFile: /etc/traefik/crowdsec-certs/ca.crt
-          crowdsecLapiTLSCertificateBouncerFile: /etc/traefik/crowdsec-certs/tls.crt
-          crowdsecLapiTLSCertificateBouncerKeyFile: /etc/traefik/crowdsec-certs/tls.key
+#    middlewares:
+#      bouncer:
+#        - name: bouncer
+#          enabled: true
+#          logLevel: INFO
+#          crowdsecMode: stream
+#          crowdsecLapiHost: crowdsec-service.crowdsec:8080
+#          forwardedHeadersTrustedIPs: []
+#          clientTrustedIPs:
+#            - 172.16.0.0/16
+#            - 172.17.0.0/16
+#            - 192.168.10.0/24
+#            - 192.168.20.0/24
+#          crowdsecLapiTLSCertificateAuthorityFile: /etc/traefik/crowdsec-certs/ca.crt
+#          crowdsecLapiTLSCertificateBouncerFile: /etc/traefik/crowdsec-certs/tls.crt
+#          crowdsecLapiTLSCertificateBouncerKeyFile: /etc/traefik/crowdsec-certs/tls.key
