--- a/clusters/main/kubernetes/core/clusterissuer/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/clusterissuer/app/helm-release.yaml
@@ -58,5 +58,5 @@ spec:
           enabled: true
           certificateIssuer: wethecommon-prod-cert
           hosts:
-            - ${DOMAIN_0}
-            - '*.${DOMAIN_0}'
+            - wethecommon.com
+            - '*.wethecommon.com'
