--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -38,26 +38,26 @@ spec:
     service:
       tcp:
         loadBalancerIP: ${TRAEFIK_IP}
-    ingress:
-      main:
-        enabled: false
-        integrations:
-          traefik:
-            enabled: true
-            middlewares:
-              - name: local
-                namespace: traefik
-              - name: bouncer
-                namespace: traefik
-          certManager:
-            enabled: true
-            certificateIssuer: wethecommon-prod-cert
-
-        hosts:
-          - host: traefik.${BASE_DOMAIN}
-            paths:
-              - path: /
-                pathType: Prefix
+#    ingress:
+#      main:
+#        enabled: false
+#        integrations:
+#          traefik:
+#            enabled: true
+#           middlewares:
+#              - name: local
+#                namespace: traefik
+#              - name: bouncer
+#                namespace: traefik
+#          certManager:
+#            enabled: true
+#            certificateIssuer: wethecommon-prod-cert
+#
+#        hosts:
+#          - host: traefik.${BASE_DOMAIN}
+#            paths:
+#              - path: /
+#                pathType: Prefix
 #    middlewares:
 #      bouncer:
 #        - name: bouncer
