--- a/clusters/main/kubernetes/core/blocky/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/blocky/app/helm-release.yaml
@@ -33,6 +33,8 @@ spec:
     # and/or disable its service
     global:
       stopAll: false
+    bootstrapDns:
+      upstream: 192.168.10.3
     service:
       dns:
         externalTrafficPolicy: Local
