--- a/clusters/main/kubernetes/flux-system/flux/webhook.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/webhook.yaml
@@ -4,7 +4,7 @@ metadata:
   name: webhook-receiver
   namespace: flux-system
   annotations:
-      cert-manager.io/cluster-issuer: wethecommon-prod
+      cert-manager.io/cluster-issuer: wethecommon-prod-cert
       cert-manager.io/private-key-rotation-policy: Always
       traefik.frontend.passHostHeader: "false"
       traefik.ingress.kubernetes.io/router.entrypoints: websecure
