--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -32,6 +32,45 @@ spec:
   values:
     ## set stopAll to "true" if you do not want to use traefik
     # and/or disable its service
+    logs:
+      general:
+        level: ERROR
+        format: json
+      access:
+        enabled: true
+        operator:
+          register: true
+    persistence:
+      crowdsec-bouncer-tls:
+        enabled: '{{ if .Values.middlewares.bouncer }}true{{ else }}false{{ end }}'
+        expandObjectName: false
+        mountPath: /etc/traefik/crowdsec-certs
+        objectName: crowdsec-bouncer-tls
+        type: secret
+      plugins:
+        enabled: true
+        mountPath: /plugins-storage
+        type: emptyDir
+    podOptions:
+      automountServiceAccountToken: true
+    portalhook:
+      enabled: true
+    providers:
+      kubernetesCRD:
+        enabled: true
+      kubernetesIngress:
+        enabled: true
+        publishedService:
+          enabled: true
+    release_name: traefik
+    resources: {}
+    securityContext:
+      container:
+        UMASK: "0022"
+        runAsGroup: 568
+        runAsUser: 568
+      pod:
+        fsGroupChangePolicy: OnRootMismatch
     global:
       stopAll: false
     defaultCertificate: "wethecommon-wildcard-cert"
@@ -77,6 +116,24 @@ spec:
             proxyProtocol:
               enabled: false
               insecureMode: false
+    tlsOptions:
+      default:
+        cipherSuites:
+          - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+          - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+          - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+          - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+          - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
+          - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
+          - TLS_AES_128_GCM_SHA256
+          - TLS_AES_256_GCM_SHA384
+          - TLS_CHACHA20_POLY1305_SHA256
+        curvePreferences:
+          - CurveP521
+          - CurveP384
+          - X25519
+        minVersion: VersionTLS12
+        sniStrict: false
     ingress:
       main:
         enabled: false
