--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -78,7 +78,7 @@ spec:
       main:
         enabled: true
         type: LoadBalancer
-        loadBalancerIP: ${TRAEFIK-DASHBOARD_IP}
+        loadBalancerIP: ${TRAEFIK_IP}
         ports:
           main:
             enabled: true
@@ -136,7 +136,7 @@ spec:
         sniStrict: false
     ingress:
       main:
-        enabled: false
+        enabled: true
         integrations:
           traefik:
             enabled: true
@@ -150,7 +150,7 @@ spec:
             certificateIssuer: wethecommon-prod-cert
 
         hosts:
-          - host: traefik.${BASE_DOMAIN}
+          - host: traefik-dashboard.${BASE_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
