--- a/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
@@ -67,6 +67,13 @@ spec:
             traefik.ingress.kubernetes.io/router.tls: 'true'
             traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd,traefik-bouncer@kubernetescrd,traefik-local@kubernetescrd
           host: crowdsec.${BASE_DOMAIN}
+      env:
+        - name: DISABLE_ONLINE_API
+          value: "false"
+        - name: ENROLL_KEY
+          value: "${CSKEY}"
+        - name: ENROLL_INSTANCE_NAME
+          value: "cluster"
       metrics:
         enabled: true
         serviceMonitor:
