--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -116,11 +116,6 @@ spec:
         ingress:
             main:
                 enabled: true
-                hosts:
-                    - host: homepage.${BASE_DOMAIN}
-                      paths:
-                        - path: /
-                          pathType: Prefix
                 integrations:
                     traefik:
                         enabled: true
@@ -129,11 +124,12 @@ spec:
                               namespace: traefik
                             - name: bouncer
                               namespace: traefik
-                        entrypoints:
-                            - websecure
-                    certManager:
-                        enabled: true
-                        certificateIssuer: wethecommon-prod-cert
+                hosts:
+                    - host: homepage.${BASE_DOMAIN}
+                tls:
+                    - hosts:
+                        - plex.${BASE_DOMAIN}
+                      clusterIssuer: cluster-cert
         persistence:
             bookmarks-config:
                 enabled: '{{ not .Values.forceConfigFromValues }}'
