--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -124,6 +124,8 @@ spec:
                               namespace: traefik
                             - name: bouncer
                               namespace: traefik
+                        entrypoints:
+                            - websecure
                 hosts:
                     - host: homepage.${BASE_DOMAIN}
                 tls:
