--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: traefik
-      version: 30.0.3
+      version: 30.0.4
       sourceRef:
         kind: HelmRepository
         name: truecharts
@@ -41,39 +41,24 @@ spec:
         operator:
           register: true
     defaultCertificate: "wethecommon-wildcard-cert"
-    persistence:
-      crowdsec-bouncer-tls:
-        enabled: '{{ if .Values.middlewares.bouncer }}true{{ else }}false{{ end }}'
-        expandObjectName: false
-        mountPath: /etc/traefik/crowdsec-certs
-        objectName: crowdsec-bouncer-tls
-        type: secret
-      plugins:
-        enabled: true
-        mountPath: /plugins-storage
-        type: emptyDir
-    podOptions:
-      automountServiceAccountToken: true
-    portalhook:
-      enabled: true
-    providers:
-      kubernetesCRD:
-        enabled: true
-      kubernetesIngress:
-        enabled: true
-        publishedService:
-          enabled: true
-    release_name: traefik
-    resources: {}
-    securityContext:
-      container:
-        UMASK: "0022"
-        runAsGroup: 568
-        runAsUser: 568
-      pod:
-        fsGroupChangePolicy: OnRootMismatch
-    global:
-      stopAll: false
+    tlsOptions:
+      default:
+        cipherSuites:
+          - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+          - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+          - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+          - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+          - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
+          - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
+          - TLS_AES_128_GCM_SHA256
+          - TLS_AES_256_GCM_SHA384
+          - TLS_CHACHA20_POLY1305_SHA256
+        curvePreferences:
+          - CurveP521
+          - CurveP384
+          - X25519
+        minVersion: VersionTLS12
+        sniStrict: false
     service:
       main:
         type: ClusterIP
