--- a/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
@@ -30,6 +30,7 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    TZ: America/Los_Angeles
     container_runtime: containerd
     tls:
       enabled: true
