--- a/clusters/main/kubernetes/core/blocky/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/blocky/app/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    TZ: America/Los_Angeles
     ## set stopAll to "true" if you do not want to use blocky
     # and/or disable its service
     global:
