--- a/clusters/main/kubernetes/core/clusterissuer/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/clusterissuer/app/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
   uninstall:
     keepHistory: false
   values:
-
+    TZ: America/Los_Angeles
     clusterIssuer:
       selfSigned:
         enabled: true
