--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -61,10 +61,10 @@ spec:
                     paths:
                       - path: /
                         pathType: Prefix
-#                tls:
-#                  hosts:
-#                    - radarr.${BASE_DOMAIN}
-#                  secretName: radarr-tls
+                tls:
+                  hosts:
+                    - radarr.${BASE_DOMAIN}
+                  secretName: radarr-tls
                 integrations:
                   traefik:
                     enabled: true
@@ -73,8 +73,6 @@ spec:
                         namespace: traefik
                       - name: bouncer
                         namespace: traefik
-                    entrypoints:
-                      - websecure
                   certManager:
                     enabled: true
                     certificateIssuer: wethecommon-prod-cert
